<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytStatisticsFrag"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lytPeriodSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88888888"
        android:orientation="horizontal"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <TextView
            android:id="@+id/periodSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:text="@string/period"
            android:textColor="#000000"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:id="@+id/hsPeriodSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/lytPeriodSelectionContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvYearly"
                    style="@style/period_type_style"
                    android:text="@string/yearly" />

                <TextView
                    android:id="@+id/tvMonthly"
                    style="@style/period_type_style"
                    android:text="@string/monthly" />

                <TextView
                    android:id="@+id/tvWeekly"
                    style="@style/period_type_style"
                    android:text="@string/weekly" />

                <TextView
                    android:id="@+id/tvDaily"
                    style="@style/period_type_style"
                    android:text="@string/daily" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lytDateSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lytPeriodSelection"
        android:background="#55CC9999"
        android:paddingBottom="2dp"
        android:paddingTop="2dp" >

        <Button
            android:id="@+id/btnLeftDateNavigator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:drawableLeft="@drawable/left_navigator_arrow"
            android:text="" />

        <Button
            android:id="@+id/btnRightDateNavigator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:drawableRight="@drawable/right_navigator_arrow"
            android:text="" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:padding="5dp"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/noDataView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lytDateSelector"
        android:gravity="center"
        android:text="@string/info_no_transactions_found"
        android:textColor="#FF1122"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lytStatisticsContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lytDateSelector"
        android:orientation="vertical" >
    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/graphOptionsSlidingDrawer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:content="@+id/graphOptionsBar"
        android:handle="@+id/btnGrpahDetail"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnGrpahDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_3"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/show_details"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <elango.thaaru.MyFinance.ElaCheckBoxBar
            android:id="@+id/graphOptionsBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" />
    </SlidingDrawer>

</RelativeLayout>