<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lytCriteriaSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#55992222"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:paddingTop="7dp"
            android:paddingRight="10dp"
            android:text="@string/show" />

        <HorizontalScrollView
            android:id="@+id/hsCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvRecentTransactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/criteria_btn_bg"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"                    
                    android:text="@string/recent"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" 
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/tvSearchTransactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/criteria_btn_bg"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"                    
                    android:text="@string/search"
                    android:textStyle="bold" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewEditContentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>